[package]
name = "icanhazport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokyo = "1.0.0"
